--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,11 @@ body {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-between;
+    border-radius: 8px;
 }
 
 .collection {
-    border-radius: 8px;
+    border-radius: 5%;
     overflow: hidden;
     width: calc(33.333% - 20px);
     /* 3 columns on larger screens */
@@ -113,6 +114,7 @@ body {
         /* Full width on smaller screens */
         flex-direction: column;
         align-items: center;
+        border-radius: 9%;
     }
 
     .thumbnail {
