--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,12 @@ body {
     text-shadow: 1px 1px 2px #000;
 }
 
+.content h1 {
+    font-size: 3em;
+    margin: 0 auto;
+    text-shadow: 1px 1px 2px #000;
+}
+
 .video-link {
 
     border: 1px solid #000;
